--- a/ShoppingList/appsettings.json
+++ b/ShoppingList/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "MongoConnection": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "Database": "ShoppingList",
+    "IsSSL": true
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
